# GuiWrapper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
guiwrapper/: guiwrapper.cpp  guiwrapper.h  modules.h
lib/linux/static/amd64/: libglfw.so.3.5
lib/windows/static/x86-64/: imgui.lib
